--- a/styles/phuthanet-style.css
+++ b/styles/phuthanet-style.css
@@ -1,3 +1,7 @@
+html{
+    background-color: blue;
+}
+
 body{
     width: 600px;
     margin: 0 auto;
@@ -6,18 +10,36 @@ body{
     border: 5px solid black
 }
 
-html{
-    background-color: blue;
-}
-
-img{
-    margin: 0 auto;
-    display: block;
-}
-
 h1{
     font-size: 50px;
     text-align: center;
     color: blue;
     text-shadow: 5px 5px 5px black;
+}
+
+img{
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 2px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+}
+
+figcaption {
+    text-align: center;
+}
+
+#heading {
+    color: blue;
+}
+
+li.popular {
+    border-style: dotted;
+    border-color: red;
+    border-width: 4px;
+} 
+
+p.p1{
+    color: blue;
 }
