--- a/styles/phuthanet-style.css
+++ b/styles/phuthanet-style.css
@@ -1,45 +1,94 @@
-html{
-    background-color: blue;
+* {
+  box-sizing: border-box;
+  margin: 0;
 }
 
-body{
-    width: 600px;
-    margin: 0 auto;
-    padding: 20px;
-    background-color: orange;
-    border: 5px solid black
+div.main {
+  background-color: darkblue;
 }
 
-h1{
-    font-size: 50px;
-    text-align: center;
-    color: blue;
-    text-shadow: 5px 5px 5px black;
+div.content {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  width: 500px;
+  margin: 0px auto;
+  padding: 10px;
+  background-color: #ff9500;
+  border: 5px solid black;
 }
 
-img{
-    display: block;
-    margin-top: 10px;
-    margin-bottom: 2px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 60%;
+h1 {
+  font-size: 36px;
+  text-align: center;
+  color: darkblue;
+  text-shadow: 5px 5px 5px black;
+}
+
+img {
+  display: block;
+  margin: 10px auto 2px;
+  max-width: 70%;
+  height: auto;
 }
 
 figcaption {
-    text-align: center;
+  text-align: center;
 }
 
 #heading {
-    color: blue;
+  color: blue;
+}
+
+ul {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 li.popular {
-    border-style: dotted;
-    border-color: red;
-    border-width: 4px;
-} 
+  border-style: dotted;
+  border-color: red;
+  border-width: 4px;
+}
 
-p.p1{
-    color: blue;
+p.p1 {
+  color: blue;
+}
+
+@media (max-width: 480px) {
+  div.content {
+    width: 82.1%;
+    max-width: none;
+  }
+
+  img {
+    max-width: 70%;
+  }
+
+  h1 {
+    font-size: 28px;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  div.main {
+    height: 1180px;
+  }
+
+  div.content {
+    max-width: 90%;
+  }
+
+  img {
+    max-width: 80%;
+  }
+
+  h1 {
+    font-size: 40px;
+  }
+  p {
+    font-size: x-large;
+  }
+
+  li {
+    font-size: x-large;
+  }
 }
